// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic pane 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`renders correctly for a full width pane 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  width: 100%;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`renders correctly for a pane with a border 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`renders correctly for a pane with a shadow 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`renders correctly for a pane with elevation 100 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

<div
  class="c0 c1"
  elevation="100"
  style="elevation: 100;"
>
  test
</div>
`;

exports[`renders correctly for a pane with elevation 200 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

<div
  class="c0 c1"
  elevation="200"
  style="elevation: 200;"
>
  test
</div>
`;

exports[`renders correctly for a pane with elevation 300 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

<div
  class="c0 c1"
  elevation="300"
  style="elevation: 300;"
>
  test
</div>
`;

exports[`renders correctly for a pane with elevation 400 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 12px 24px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

<div
  class="c0 c1"
  elevation="400"
  style="elevation: 400;"
>
  test
</div>
`;
